--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "dev:ssr": "ng run ngdex:serve-ssr",
     "serve:ssr": "node dist/ngdex/server/main.js",
     "build:ssr": "ng build --prod && ng run ngdex:server:production",
-    "prerender": "ng run ngdex:prerender"
+    "prerender": "ng run ngdex:prerender",
+    "scully": "scully",
+    "scully:serve": "scully serve"
   },
   "private": true,
   "dependencies": {
@@ -26,6 +28,9 @@
     "@angular/router": "~9.1.2",
     "@angular/service-worker": "~9.1.2",
     "@nguniversal/express-engine": "^9.1.0",
+    "@scullyio/init": "^1.0.0-beta.0",
+    "@scullyio/ng-lib": "^1.0.0-beta.0",
+    "@scullyio/scully": "^1.0.0-beta.0",
     "express": "^4.15.2",
     "nes.css": "^2.3.0",
     "rxjs": "~6.5.4",
@@ -39,9 +44,9 @@
     "@angular/language-service": "~9.1.2",
     "@nguniversal/builders": "^9.1.0",
     "@types/express": "^4.17.0",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
